--- a/Musify-DDAC_Assignment/Views/Home/Index.cshtml
+++ b/Musify-DDAC_Assignment/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
             <div class="wrap" style="font-family: 'Bree Serif', serif;">
                 <h1 class="display-4">Welcome To Musify</h1>
                 <h2>Music is Everything</h2>
+                <h3>Kontol</h3>
             </div>
         </div>
     </div>
